added cache and repository methods